	  (Issue 64)
        * new method AtomGroup.bbox() that returns the orthorhombic bounding box
	* enhancements of the analysis.density module (build density
	  from B-factors) 
	* PQR radius is now an attribute of Atom; AtomGroup.radii() returns the
	  radii as a NumPy array; internally B-factor has also become an
	  attribute of each Atom. 
	* doc improvements 

02/08/11 orbeckst, denniej0, jandom, tyler.je.reddy, Joshua Adelman
        * 0.7.1 release
        * online documentation
        * AMBER topology and trj capabilities (netcdf not yet available)
        * PQR file reading support
        * new analysis.contacts.ContactAnalysis1 class that supports a
	  native contact analysis between arbitrary groups     
        * new examples (e.g. peptide helix clustering in a membrane)
	* fixed Issue 58 (align.rms_fit_trj; fix reported by Joshua
  	  Adelman)
	* new analysis module 'density': creation and analysis of volume data
        * fast RMSD aligner based on Douglas Theobald's QCP method for
	  calculating the minimum RMSD between two structures and
	  determining the optimal least-squares rotation matrix;
	  replaces the slower previous code (implemented by Joshua Adelman from
	  his pyqcprot package https://github.com/synapticarbors/pyqcprot);
	  deprecated core.rms_fitting.rms_rotation_matrix() and scheduled for
          removal in 0.8
        * uses cython instead of pyrex

11/05/10 orbeckst, denniej0, tyler.je.reddy, danny.parton, joseph.goose
        * major release 0.7.0
          (includes changes that can BREAK BACKWARDS COMPATIBILITY)
        * Removed ALL DEPRECATED code:
	  - AtomGroup.principleAxes (Issue 33)
	  - DCD.DCDReader.dcd_header() and DCD.DCDWriter.dcd_header()
	    (use _dcd_header())
          - Universe.dcd (and Universe.xtc, Universe.trr...) --- from
  	    now on only Universe.trajectory is supported. 
	    WILL BREAK LEGACY CODE!
          - removed the following packages from top-level MDAnalysis
 	    name space: